# Finance-Live

./: .gitignore  SCREEN_PASSED.csv  functions.py  main.py  market_data.py  pyproject.toml  screens.py  technical_indicators.py  test.py  testy.py
data/: 0RYA.L.csv  888.L.csv  AAF.L.csv  AAL.L.csv  ABDN.L.csv  ACRL.L.csv  ACSO.L.csv  ADM.L.csv  ADT1.L.csv  AEP.L.csv  AET.L.csv  AFC.L.csv  AGFX.L.csv  AGR.L.csv  AGTA.L.csv  AHT.L.csv  AIBG.L.csv  AJB.L.csv  ALFA.L.csv  ALL.L.csv  ALNA.L.csv  ALTN.L.csv  AMC.L.csv  AMGO.L.csv  AML.L.csv  AMS.L.csv  ANTO.L.csv  AO.L.csv  APF.L.csv  APH.L.csv  APTD.L.csv  ARBB.L.csv  ASAI.L.csv  ASC.L.csv  ASCL.L.csv  ASHM.L.csv  AT.L.csv  ATG.L.csv  AUTO.L.csv  AV.L.csv  (+506 more)
notes/: Divergences.xlsx
screen passed/: AXS.L.csv  CAL.L.csv  CLDN.L.csv  HSS.L.csv  IBPO.L.csv  INCH.L.csv  KETL.L.csv  MONY.L.csv  OCDO.L.csv  SFR.L.csv  SSPG.L.csv  TENG.L.csv  TGA.L.csv  THG.L.csv  VLS.L.csv  VOD.L.csv  WHR.L.csv  WJG.L.csv
static/: lstyles.css  scripts.js  styles.css
templates/: _navigation.html  index.html  layout.html
