[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
requests = "^2.28.1"
yahoo-fin = "^0.8.9"
yfinance = "^0.1.74"
finplot = "^1.8.2"
Flask = "^2.1.3"
pandas = "^1.4.3"
PyQt5 = "^5.15.7"
pyqtgraph = "^0.12.4"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"